# camlidl

./: .depend  .gitignore  Changes  LICENSE  META  Makefile  Makefile.config  README  array.ml  array.mli  camlidl.opam  camlidlruntime.c  camlidlruntime.h  clflags.ml  com.ml  com.mli  constdecl.ml  constdecl.mli  cvttyp.ml  cvttyp.mli  cvtval.ml  cvtval.mli  dune-project  ebuff.mli  enum.ml  enumdecl.ml  file.ml  file.mli  funct.ml  funct.mli  idltypes.mli  intf.ml  intf.mli  intfgen.ml  intfgen.mli  lexer_simple.mll  linenum.mli  main.ml  normalize.ml  normalize.mli  (+18 more)
compiler/: .depend  Makefile  array.ml  array.mli  clflags.ml  config.mli  constdecl.ml  constdecl.mli  cvttyp.ml  cvttyp.mli  cvtval.ml  cvtval.mli  dune  ebuff.mli  enum.ml  enum.mli  enumdecl.ml  enumdecl.mli  file.ml  file.mli  fixlabels.ml  fixlabels.mli  funct.ml  funct.mli  idlarray.ml  idlarray.mli  idltypes.mli  intf.ml  intf.mli  lexer_midl.mli  lexer_midl.mll  lexer_simple.mli  lexpr.ml  lexpr.mli  linenum.mli  linenum.mll  main.ml  normalize.ml  normalize.mli  parse.ml  (+22 more)
config/: Makefile.unix  Makefile.win32
doc/: .gitignore  Makefile  macros.hva  macros.sty  main.htex  main.tex  manual.etex
doc/tools/: Makefile  transf.mll
docs/: index.html  main.css  main.html  main001.html  main002.html  main003.html  main004.html  main005.html  main006.html
lib/: Makefile  com.ml  com.mli  dune
runtime/: .depend  Makefile  Makefile.unix  Makefile.win32  camlidlruntime.h  cfactory.c  cfactory.cpp  comerror.c  comintf.c  comstuff.h  dispatch.c  idlalloc.c  superror.cpp
tags/camlidl100/: LICENSE
tags/camlidl100/compiler/: .cvsignore  .depend  array.mli  clflags.ml  config.mlp  constdecl.ml  constdecl.mli  cvttyp.mli  cvtval.ml  enum.mli  enumdecl.ml  enumdecl.mli  file.mli  idltypes.mli  lexer_midl.mll  linenum.mll  main.ml  parse.mli  parser_midl.mly  structdecl.ml  structdecl.mli  tests.ml  typedef.mli  uniondecl.ml  uniondecl.mli  utils.mli
tags/camlidl100/config/: Makefile.unix  Makefile.win32
tags/camlidl100/doc/: Makefile  main.tex  manual.etex
tags/camlidl100/lib/: .depend  Makefile  com.ml  com.mli
tags/camlidl100/runtime/: Makefile.unix  comerror.c  (+6 more)
tags/camlidl101/: LICENSE  README
tags/camlidl102/: Makefile
tags/camlidl103/: LICENSE  README
tags/camlidl104/: Changes
tags/camlidl105/: Changes
tests/: .gitignore  Makefile  arrays.idl  basics.idl  comcomp.c  comcomp.cpp  comcomp.h  component.idl  gtknotebook.idl  mktestcomp  multi_import.idl  stdint.idl  structs.idl  testcomponent.ml  unix.idl
tests/comp/: camlcomp.ml
tests/dispatch/: CMPNT.CPP  MAKEFILE  SERVER.DEF  SERVER.IDL  camlcomp.ml
tests/hdirect/: Makefile  test003.idl  test006.idl  test008.idl  test011.idl
tools/: Makefile  Makefile.unix  Makefile.win32  camlidlcompat.h  camlidldll.tpl
trunk/: .depend  Changes  Makefile  Makefile.config  array.ml  camlidlruntime.c  camlidlruntime.h  com.ml  config.mli  constdecl.ml  constdecl.mli  cvttyp.ml  cvttyp.mli  cvtval.ml  enum.ml  enum.mli  enumdecl.ml  file.ml  file.mli  funct.ml  funct.mli  intf.ml  intf.mli  intfgen.ml  lexer_midl.mll  lexer_simple.mll  linenum.mll  main.ml  normalize.ml  normalize.mli  parse_aux.mli  parser_midl.mly  parser_simple.mly  predef.mli  struct.ml  struct.mli  structdecl.ml  stubgen.ml  stubgen.mli  typedef.ml  (+7 more)
trunk/compiler/: .depend  Makefile  array.ml  array.mli  config.mli  config.mlp  constdecl.ml  constdecl.mli  cvttyp.ml  cvttyp.mli  cvtval.ml  cvtval.mli  ebuff.ml  enum.ml  enum.mli  enumdecl.ml  enumdecl.mli  file.ml  file.mli  fixlabels.mli  funct.ml  funct.mli  idltypes.mli  intf.ml  intf.mli  lexer_midl.mli  lexer_midl.mll  lexer_simple.mli  lexpr.ml  lexpr.mli  linenum.mli  linenum.mll  main.ml  normalize.ml  normalize.mli  parse.mli  parse_aux.ml  parse_aux.mli  parser_midl.mly  predef.mli  (+16 more)
trunk/config/: Makefile.unix
trunk/doc/: main.tex  manual.etex
trunk/lib/: .depend  Makefile  com.ml  com.mli
trunk/runtime/: Makefile.win32  camlidlruntime.h  cfactory.c  cfactory.cpp  comerror.c  comintf.c  comstuff.h  dispatch.c  idlalloc.c  oletypes.c
trunk/tests/: Makefile  arrays.idl  basics.idl  comcomp.cpp  component.idl  gtknotebook.idl  ssl.idl  structs.idl  testcomponent.ml  unix.idl
trunk/tools/: Makefile  camlidlcompat.h  camlidldll.tpl
(+156 files in other folders)
