opam-version: "2.0"
name: "camlidl"
version: "1.12"
synopsis: "Stub code generator for OCaml"
description: """\
CamlIDL is a stub code generator for OCaml. It automates the
generation of C stub code required for the Caml/C interface, based on
an MIDL specification. Also provides some support for Microsoft's COM
software components."""
maintainer: "Nicolas Berthier <m@nberth.space>"
authors: "Xavier Leroy"
license: [
  "LGPL-2.0-or-later WITH OCaml-LGPL-linking-exception"
]
homepage: "https://github.com/xavierleroy/camlidl"
bug-reports: "https://github.com/xavierleroy/camlidl/issues"
depends: [
  "ocaml" {>= "4.05"}
]
build: [
  ["mv" "config/Makefile.unix" "config/Makefile"] {os != "win32"}
  ["mv" "config/Makefile.mingw" "config/Makefile"] {os = "win32"}
  [make "all"]
]
dev-repo: "git+https://github.com/xavierleroy/camlidl.git"
