opam-version: "2.0"
version: "1.13"
maintainer: ["Xavier Leroy <xavier.leroy@college-de-france.fr>"]
authors: ["Xavier Leroy"]
homepage: "https://github.com/xavierleroy/camlidl"
dev-repo: "git+https://github.com/xavierleroy/camlidl.git"
bug-reports: "https://github.com/xavierleroy/camlidl/issues"
license: [
  "LGPL-2.0-or-later WITH OCaml-LGPL-linking-exception"
]
x-maintenance-intent: ["(latest)"]
build: [
  ["mv" "config/Makefile.unix" "config/Makefile"] {os != "win32"}
  ["mv" "config/Makefile.mingw" "config/Makefile"] {os = "win32"}
  [make "all"]
]
synopsis: "Stub code generator for OCaml"
description: """
CamlIDL is a stub code generator for OCaml. It automates the
generation of C stub code required for the Caml/C interface, based on
an MIDL specification. Also provides some support for Microsoft's COM
software components."""
depends: [
  "ocaml" {>= "4.05"}
]
